--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "nand2Tetris"
 version = "0.1.0"
 edition = "2024"
 
-[workspace]
-members = [
-  "assembler", "compiler", "virtual-machine",
-]
+[dependencies]
+assembler ={ path = "./assembler"}
+hvm ={ path = "./hvm"}
+compiler ={ path = "./compiler"}
