--- a/assembler/Cargo.toml
+++ b/assembler/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "assembler"
+name = "hack_assembler"
 version = "0.1.0"
 edition = "2024"
 
 [lib]
-name = "assembler"
+name = "hack_assembler"
 path = "src/lib.rs"
