--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-assembler ={ path = "./assembler"}
+hack_assembler ={ path = "./assembler"}
 hvm ={ path = "./hvm"}
 compiler ={ path = "./compiler"}
